objects/Bundle_Item__c.object
<CustomObject>
    <fields>
        <fullName>Bundle_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bundle Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Item included in Bundle for</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bundle_Parent_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bundle Parent Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Items included in Bundle</relationshipLabel>
        <relationshipName>ItemsIncludedInBundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Bundle_Item__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unique_ID_value__c</fullName>
        <label>unique ID value</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Bundle Item</label>
    <nameField>
        <displayFormat>Item-Included-{0000}</displayFormat>
        <label>Bundle Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Positive_Item_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity__c &lt; 1</errorConditionFormula>
        <errorMessage>The quantity offered must be greater than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>avoid_items_on_itself</fullName>
        <active>true</active>
        <errorConditionFormula>Bundle_Item__c =  Bundle_Parent_Item__c</errorConditionFormula>
        <errorMessage>Cannot have the bundle source product as part of its own bundle !!!</errorMessage>
    </validationRules>
</CustomObject>